feat: create ES config yaml and load param as args